--- a/index.html
+++ b/index.html
@@ -86,13 +86,15 @@
         </div>
         <div class="page2">
             <aside id="left">
-                <img src="https://images.unsplash.com/photo-1623039497550-c4f2ccc7b875?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-                <h3>VOGUE / SHOT</h3>
+                <!-- <img src="https://images.unsplash.com/photo-1623039497550-c4f2ccc7b875?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                 -->
+                <img src="https://media.gettyimages.com/id/1241924362/photo/puma-x-dua-lipa-launch-dinner-hosted-by-dua-lipa-at-bistrotheque.jpg?s=1024x1024&w=gi&k=20&c=2ChDUwmlXYPsjwYTO6Y0IqsyRCqqHno-uQYX5o7GGjA=" alt="">
+                 <h3>VOGUE / SHOT</h3>
             </aside>
             <aside id="right">
                 <img src="https://images.unsplash.com/photo-1609505848912-b7c3b8b4beda?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
                 <div class="content">
-                    <h5>Hannah Molter features in a Fashion story by the lake for Vogue new shot</h5>
+                    <h5>DUA Lipa features in a Fashion story by the lake for Vogue new shot</h5>
                     <h6>Such exposure to the Fashion and beauty industries enabled her passion for branding and creativity to transition from one side to the camera to the other.</h6>
                 </div>
             </aside>
@@ -235,6 +237,7 @@
             <h3> Created By RAhul</h3>
             <h3> Created By RAhul</h3>
         </div>
+      
     </main>
 </body>
 </html>
